--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.8"
 grpcio = "^1.60.1"
-protobuf = "~4.25.2"
+protobuf = "^4.25.2"
 
 [build-system]
 requires = ["poetry-core"]
