--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ python = "^3.8"
 grpcio = "^1.60.1"
 protobuf = "^4.25.2"
 
+[tool.poetry.group.dev.dependencies]
+toml = "^0.10.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
