--- a/.github/workflows/bump_version_and_publish.yml
+++ b/.github/workflows/bump_version_and_publish.yml
@@ -21,15 +21,19 @@ jobs:
       - name: Install Poetry
         uses: snok/install-poetry@v1
 
+      - name: Install project
+        run: poetry install --with dev --no-root
+
       - name: Bump version and commit
         run: |
-          python bump_version.py
+          poetry run python bump_version.py
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git commit -am "Bump version"
           git push
 
-      - name: Install and build
+      - name: Build
         run: poetry build
+      
 
 
