--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,6 +9,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    environment:
+      name: testpypi
+      url: https://test.pypi.org/p/bencherscaffold
+      permissions:
+        id-token: write
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -25,6 +31,7 @@ jobs:
         run: poetry install --with dev --no-root
 
       - name: Bump version and commit
+        # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         run: |
           poetry run python bump_version.py
           git config --local user.email "action@github.com"
@@ -33,7 +40,14 @@ jobs:
           git push
 
       - name: Build
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         run: poetry build
+
+      - name: Publish package distributions to TestPyPI
+        # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          repository-url: https://test.pypi.org/legacy/
       
 
 
