--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,6 +14,7 @@ jobs:
       url: https://test.pypi.org/p/bencherscaffold
     permissions:
       id-token: write
+      contents: write
 
     steps:
       - name: Checkout code
