--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -32,7 +32,7 @@ jobs:
         run: poetry install --with dev --no-root
 
       - name: Bump version and commit
-        # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         run: |
           poetry run python bump_version.py
           git config --local user.email "action@github.com"
@@ -41,11 +41,11 @@ jobs:
           git push
 
       - name: Build
-        # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         run: poetry build
 
       - name: Publish package distributions to PyPI
-        # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@release/v1
       - name: Run update scaffold action in bencher repo
         uses: actions/github-script@v6
