--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -47,7 +47,9 @@ jobs:
       - name: Publish package distributions to PyPI
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@release/v1
+
       - name: Run update scaffold action in bencher repo
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.BENCHER_TOKEN }}
